<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_entry"
        android:title="@string/title_entry"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_stock"
        android:icon="@drawable/ic_stock"
        android:title="@string/title_stock" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profiles"
        android:icon="@drawable/ic_profiles"
        android:title="@string/title_profiles" />

</menu>